# LixTalk-server

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  LixTalk.sln  Readme.md  Readme.zh.md
LixTalk/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  Channel.cpp  Channel.h  ChatServer.cpp  ChatServer.h  CurThread.h  DbConnector.cpp  DbConnector.h  EventLoop.cpp  EventLoop.h  LixTalk.vcxproj  LixTalk.vcxproj.filters  LogInfo.cpp  LogInfo.h  Poller.cpp  Poller.h  Server.cpp  Server.h  Setting.cpp  Setting.h  Socket.cpp  Socket.h  TcpConnetion.h  logging.cpp  logging.h  main.cpp  msg.h  user.h
LixTalk/net/: NetAddress.h  Socket.cpp  Socket.h
doc/: code.md
test/: StressTest.py  StressTest_sendmsg.py
